Fixed spacing issues on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -85,8 +85,10 @@ li {
 
 h1 {
     text-align: center;
-    margin-bottom: 0px;
+    margin-top: 16px;
+    margin-bottom: 16px;
     font-size: 50px;
+    line-height: 40px;
 }
 
 /**
