--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,17 +8,6 @@
     position: relative;
 }
 
-.site-title {
-    font-size: 45px;
-    line-height: 45px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    
-    &:hover {
-        text-decoration: none;
-    }
-}
-
 .site-nav {
     width: 160px;
     margin: auto;
